--- a/po/af.po
+++ b/po/af.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: switchboard\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-02-01 16:19+0000\n"
-"PO-Revision-Date: 2015-12-06 12:56+0000\n"
+"PO-Revision-Date: 2024-02-16 16:33+0200\n"
 "Last-Translator: Avi Romanoff <Unknown>\n"
 "Language-Team: Afrikaans <af@li.org>\n"
 "Language: af\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Launchpad-Export-Date: 2017-02-02 05:47+0000\n"
-"X-Generator: Launchpad (build 18315)\n"
+"X-Generator: Poedit 3.4.2\n"
 
 #: src/Application.vala:24
 msgid "All Settings"
@@ -25,7 +25,7 @@ msgstr "Alle Instellings"
 #: src/Application.vala:115
 #, c-format
 msgid "Specified link '%s' does not exist, going back to the main panel"
-msgstr ""
+msgstr "Gespesifiseerde skakel '%s' bestaan nie, gaan terug na die hoofpaneel"
 
 #: src/Application.vala:167 src/Application.vala:220
 msgid "System Settings"
@@ -37,11 +37,11 @@ msgstr "Soek Instellings"
 
 #: src/CategoryView.vala:40
 msgid "No Settings Found"
-msgstr ""
+msgstr "Geen instellings gevind nie"
 
 #: src/CategoryView.vala:41
 msgid "Install settings plugins and re-launch System Settings."
-msgstr ""
+msgstr "Installeer instellingsinproppe en begin stelselinstellings weer."
 
 #: src/CategoryView.vala:205
 msgid "Personal"
@@ -53,7 +53,7 @@ msgstr "Hardeware"
 
 #: src/CategoryView.vala:209
 msgid "Network & Wireless"
-msgstr ""
+msgstr "Netwerk en draadloos"
 
 #: src/CategoryView.vala:211
 msgid "Administration"
@@ -61,12 +61,12 @@ msgstr "Administrasie"
 
 #: src/SearchView.vala:30
 msgid "Try changing search terms."
-msgstr ""
+msgstr "Probeer soekterme verander."
 
 #: src/SearchView.vala:49
 #, c-format
 msgid "No Results for “%s”"
-msgstr ""
+msgstr "Geen resultate vir \"%s\" nie"
 
 #~ msgid "translator-credits"
 #~ msgstr ""
